kubernetes/manifesto/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-subdominio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
  labels:
    name: ingress-subdominio
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/blue"
          backend:
            service:
              name: app-blue
              port: 
                number: 8080
    - http:
        paths:
        - pathType: Prefix
          path: "/green"
          backend:
            service:
              name: app-green
              port:
                number: 8080
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-dominio
#  labels:
#    name: ingress-dominio
#spec:
#  ingressClassName: nginx
#  rules:
#  - host: blue.aws.nip.io
#    http:
#      paths:
#      - pathType: Prefix
#        path: "/"
#        backend:
#          service:
#            name: app-blue
#            port: 
#              number: 8080
#  - host: green.aws.nip.io
#    http:
#      paths:
#      - pathType: Prefix
#        path: "/"
#        backend:
#          service:
#            name: app-green
#            port: 
#              number: 8080
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-default
#  labels:
#    name: ingress-default
#spec:
#  ingressClassName: nginx
#  defaultBackend:
#    service:
#      name: nginx
#      port:
#        number: 80
#
